[Upgraded] v2.4 stable algorithm version